# insurahub-implementation/src/main/java/com/cspot/insurahub/plan/controller/PlanController.java
@@ -13,6 +13,7 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -32,6 +33,16 @@ public class PlanController implements PlansApi {
     @ResponseStatus(HttpStatus.CREATED)
     public PostResponse addPackagePlan(UUID packageId, PlanRequest planRequest) {
         return planService.addPlan(packageId, planRequest);
+    }
+
+    @Override
+    public List<PlanResponse> getPlans() {
+        return planService.getAvailablePlans();
+    }
+
+    @Override
+    public PlanResponse getPlanById(UUID id) {
+        return planService.getPlanById(id);
     }
 
     @Override
